--- a/style.css
+++ b/style.css
@@ -1,9 +1,12 @@
 :root{
     --cyan: hsl(179, 62%, 43%);
+    --ltcyan: hsl(179, 62%, 50%);
     --yellow: hsl(71, 73%, 54%);
     --lightGray: hsl(204, 43%, 93%);
     --grayishBlue: hsl(218, 22%, 67%);
     --white: hsl(0, 0%, 100%);
+    --paddingX: 1.8rem;
+    --paddingY: 1.5rem;
 }
 
 html {
@@ -21,18 +24,31 @@ body {
     line-height: 1.3;
     background-color: var(--lightGray);
     color: var(--grayishBlue);
+    padding: var(--paddingX);
 }
 
 a {
     text-decoration: none;
 }
+h1, h2, h3 {
+    margin-top: 0;
+}
+h2 {
+    margin-bottom: 1.25rem;
+}
 .price {
+    border-radius: 0.5rem;
+    overflow: hidden;
    
     @media only screen and (min-width: 62.5em) {
         display: grid;
     }
 }
 
+.price > * {
+    padding: var(--paddingX) var(--paddingY);
+    
+}
 .community {
     background: var(--white);
 }
@@ -44,11 +60,12 @@ a {
 }
 
 .community h3 {
+    font-size: 1rem;
     color: var(--yellow);
     font-weight: bold;
 }
 
 .community p {
     font-size: 0.85rem;
-    line-height: 1.5;
+    line-height: 1.75;
 }
